@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one
  * or more contributor license agreements.  See the NOTICE file
  * distributed with this work for additional information
@@ -18,25 +18,24 @@
  */
 package org.apache.pulsar.common.configuration;
 
-import static com.google.common.base.Preconditions.checkNotNull;
+import static java.util.Objects.requireNonNull;
 import static org.apache.pulsar.common.util.FieldParser.update;
-
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Modifier;
 import java.util.Arrays;
 import java.util.Map;
 import java.util.Properties;
-
 import org.apache.commons.lang.StringUtils;
 import org.apache.pulsar.broker.ServiceConfiguration;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 /**
- * Loads ServiceConfiguration with properties
+ * Loads ServiceConfiguration with properties.
  *
  *
  */
@@ -51,7 +50,7 @@ public class PulsarConfigurationLoader {
      */
     public static <T extends PulsarConfiguration> T create(String configFile,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
-        checkNotNull(configFile);
+        requireNonNull(configFile);
         try (InputStream inputStream = new FileInputStream(configFile)) {
             return create(inputStream, clazz);
         }
@@ -70,7 +69,7 @@ public class PulsarConfigurationLoader {
     public static <T extends PulsarConfiguration> T create(InputStream inStream,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
         try {
-            checkNotNull(inStream);
+            requireNonNull(inStream);
             Properties properties = new Properties();
             properties.load(inStream);
             return (create(properties, clazz));
@@ -91,13 +90,14 @@ public class PulsarConfigurationLoader {
     @SuppressWarnings({ "rawtypes", "unchecked" })
     public static <T extends PulsarConfiguration> T create(Properties properties,
             Class<? extends PulsarConfiguration> clazz) throws IOException, IllegalArgumentException {
-        checkNotNull(properties);
-        T configuration = null;
+        requireNonNull(properties);
+        T configuration;
         try {
-            configuration = (T) clazz.newInstance();
+            configuration = (T) clazz.getDeclaredConstructor().newInstance();
             configuration.setProperties(properties);
             update((Map) properties, configuration);
-        } catch (InstantiationException | IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException
+                | NoSuchMethodException | InvocationTargetException e) {
             throw new IllegalArgumentException("Failed to instantiate " + clazz.getName(), e);
         }
         return configuration;
@@ -115,7 +115,7 @@ public class PulsarConfigurationLoader {
      * @throws IllegalAccessException
      */
     public static boolean isComplete(Object obj) throws IllegalArgumentException {
-        checkNotNull(obj);
+        requireNonNull(obj);
         Field[] fields = obj.getClass().getDeclaredFields();
         StringBuilder error = new StringBuilder();
         for (Field field : fields) {
@@ -172,33 +172,50 @@ public class PulsarConfigurationLoader {
      * @param ignoreNonExistMember
      * @return
      * @throws IllegalArgumentException
-     *             if conf has the field whose name is not contained in ServiceConfiguration and ignoreNonExistMember is false.
+     *             if conf has the field whose name is not contained in ServiceConfiguration and ignoreNonExistMember
+     *             is false.
      * @throws RuntimeException
      */
-    public static ServiceConfiguration convertFrom(PulsarConfiguration conf, boolean ignoreNonExistMember) throws RuntimeException {
+    public static ServiceConfiguration convertFrom(PulsarConfiguration conf, boolean ignoreNonExistMember)
+            throws RuntimeException {
         try {
-            final ServiceConfiguration convertedConf = ServiceConfiguration.class.newInstance();
+            final ServiceConfiguration convertedConf = ServiceConfiguration.class
+                    .getDeclaredConstructor().newInstance();
             Field[] confFields = conf.getClass().getDeclaredFields();
+            Properties sourceProperties = conf.getProperties();
+            Properties targetProperties = convertedConf.getProperties();
             Arrays.stream(confFields).forEach(confField -> {
                 try {
-                    Field convertedConfField = ServiceConfiguration.class.getDeclaredField(confField.getName());
                     confField.setAccessible(true);
-                    if (!Modifier.isStatic(convertedConfField.getModifiers())) {
+                    Field convertedConfField = ServiceConfiguration.class.getDeclaredField(confField.getName());
+                    if (!Modifier.isStatic(convertedConfField.getModifiers())
+                            && convertedConfField.getDeclaredAnnotation(FieldContext.class) != null) {
                         convertedConfField.setAccessible(true);
                         convertedConfField.set(convertedConf, confField.get(conf));
                     }
                 } catch (NoSuchFieldException e) {
                     if (!ignoreNonExistMember) {
-                        throw new IllegalArgumentException("Exception caused while converting configuration: " + e.getMessage());
+                        throw new IllegalArgumentException(
+                                "Exception caused while converting configuration: " + e.getMessage());
+                    }
+                    // add unknown fields to properties
+                    try {
+                        String propertyName = confField.getName();
+                        if (!sourceProperties.containsKey(propertyName) && confField.get(conf) != null) {
+                            targetProperties.put(propertyName, confField.get(conf));
+                        }
+                    } catch (Exception ignoreException) {
+                        // should not happen
                     }
                 } catch (IllegalAccessException e) {
                     throw new RuntimeException("Exception caused while converting configuration: " + e.getMessage());
                 }
             });
+            // Put the rest of properties to new config
+            targetProperties.putAll(sourceProperties);
             return convertedConf;
-        } catch (InstantiationException e) {
-            throw new RuntimeException("Exception caused while converting configuration: " + e.getMessage());
-        } catch (IllegalAccessException e) {
+        } catch (InstantiationException | IllegalAccessException
+                | InvocationTargetException | NoSuchMethodException e) {
             throw new RuntimeException("Exception caused while converting configuration: " + e.getMessage());
         }
     }
